src/main/metadata/objects/Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Thailand Article Type</description>
    <fields>
        <fullName>Additional_Content__c</fullName>
        <label>Additional Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment_10__c</fullName>
        <label>Attachment 10</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_1__c</fullName>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>After-Sales</fullName>
                </value>
                <value>
                    <fullName>After Sales - Marketing</fullName>
                </value>
                <value>
                    <fullName>After Sales - Part</fullName>
                </value>
                <value>
                    <fullName>After Sales - Recall/Technical</fullName>
                </value>
                <value>
                    <fullName>After Sales - TCM</fullName>
                </value>
                <value>
                    <fullName>After Sales - Warranty</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>MBLT-Accounting</fullName>
                </value>
                <value>
                    <fullName>MBLT-Collection</fullName>
                </value>
                <value>
                    <fullName>MBLT-Contract Activation</fullName>
                </value>
                <value>
                    <fullName>MBLT-Contract Management</fullName>
                </value>
                <value>
                    <fullName>MBLT-Credit</fullName>
                </value>
                <value>
                    <fullName>MBLT-Customer Service</fullName>
                </value>
                <value>
                    <fullName>MBLT-Insurance</fullName>
                </value>
                <value>
                    <fullName>MBLT-Marketing</fullName>
                </value>
                <value>
                    <fullName>MBLT-Sales</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Level__c</fullName>
        <label>Emergency Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_Updated_Flag__c</fullName>
        <label>Information Updated Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PiC__c</fullName>
        <label>PiC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Article</label>
    <pluralLabel>Article</pluralLabel>
</CustomObject>